; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/amd/xgbe/extr_xgbe-mdio.c_xgbe_an_isr_task.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/amd/xgbe/extr_xgbe-mdio.c_xgbe_an_isr_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xgbe_prv_data = type { i32, i32 }

@intr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"AN interrupt received\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @xgbe_an_isr_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xgbe_an_isr_task(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.xgbe_prv_data*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = inttoptr i64 %4 to %struct.xgbe_prv_data*
  store %struct.xgbe_prv_data* %5, %struct.xgbe_prv_data** %3, align 8
  %6 = load %struct.xgbe_prv_data*, %struct.xgbe_prv_data** %3, align 8
  %7 = load i32, i32* @intr, align 4
  %8 = load %struct.xgbe_prv_data*, %struct.xgbe_prv_data** %3, align 8
  %9 = getelementptr inbounds %struct.xgbe_prv_data, %struct.xgbe_prv_data* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @netif_dbg(%struct.xgbe_prv_data* %6, i32 %7, i32 %10, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.xgbe_prv_data*, %struct.xgbe_prv_data** %3, align 8
  %13 = getelementptr inbounds %struct.xgbe_prv_data, %struct.xgbe_prv_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  switch i32 %14, label %21 [
    i32 129, label %15
    i32 128, label %15
    i32 131, label %18
    i32 130, label %18
  ]

15:                                               ; preds = %1, %1
  %16 = load %struct.xgbe_prv_data*, %struct.xgbe_prv_data** %3, align 8
  %17 = call i32 @xgbe_an73_isr(%struct.xgbe_prv_data* %16)
  br label %22

18:                                               ; preds = %1, %1
  %19 = load %struct.xgbe_prv_data*, %struct.xgbe_prv_data** %3, align 8
  %20 = call i32 @xgbe_an37_isr(%struct.xgbe_prv_data* %19)
  br label %22

21:                                               ; preds = %1
  br label %22

22:                                               ; preds = %21, %18, %15
  ret void
}

declare dso_local i32 @netif_dbg(%struct.xgbe_prv_data*, i32, i32, i8*) #1

declare dso_local i32 @xgbe_an73_isr(%struct.xgbe_prv_data*) #1

declare dso_local i32 @xgbe_an37_isr(%struct.xgbe_prv_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
